CORE-49788: NB mobile alignment issues corrected.

--- a/docroot/themes/custom/transac/alshaya_new_balance/conditional-sass/checkout-tracker/component/_checkout-progress-tracker.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/conditional-sass/checkout-tracker/component/_checkout-progress-tracker.scss
@@ -15,7 +15,7 @@
         span {
           @include breakpoint($only-mobile) {
             font-size: rem(14);
-            padding-top: rem(4);
+            padding-top: rem(2);
           }
 
           padding-top: 0;
@@ -24,6 +24,10 @@
           html[lang="ar"] & {
             padding-top: rem(5);
             margin-top: rem(-1);
+
+            @include breakpoint($only-mobile) {
+              padding-top: rem(6);
+            }
           }
         }
 
@@ -34,10 +38,6 @@
             @include breakpoint($only-mobile) {
               padding-top: rem(3);
               margin-top: rem(-3);
-
-              html[lang="ar"] & {
-                padding-top: rem(4);
-              }
             }
 
             @include breakpoint($tablet) {
